--- a/WebApiDotNet/appsettings.json
+++ b/WebApiDotNet/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "cs": "Server=DESKTOP-IOVTDI0;Database=WebApiDotNetDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "SecritKey": "asdadaqeq!@##3244343dsdfsfdiui989",
+    "AudienceIP": "http://localhost:4200/",
+    "IssuerIP": "http://localhost:5127/"
   }
 }
